# bmssp-replication

./: .gitignore  Cargo.toml  README.md  profile.sh
bench/: .gitignore  bench_config.toml  castro_config.toml  pyproject.toml  run.py
benches/: algorithms.rs  benchmark_framework.rs
eval/: .gitignore  benchmark_analysis.py  castro_comparison.py  profile_analysis.py  pyproject.toml  thesis_plots.py
eval/lit/: app.py
graphs/dimacs/: .gitignore
scripts/: fetch_dimacs_roads.sh  profile_bench.sh
src/: dimacs.rs  graph_repr.rs  graph_source.rs  graph_store.rs  lib.rs  tracking_alloc.rs  utils.rs
src/algorithms/: dijkstra.rs  dijkstra_opt.rs  finalize.rs  mod.rs  traits.rs
src/algorithms/bmssp_base/: block_list.rs  bmssp_core.rs  d_struct.rs  mod.rs
src/algorithms/bmssp_o_1/: base_case.rs  bmssp_core.rs  d_struct.rs  find_pivots.rs  mod.rs  state.rs
src/algorithms/bmssp_o_2/: base_case.rs  bmssp_core.rs  epoch_map.rs  find_pivots.rs  mod.rs
src/algorithms/bmssp_o_3/: base_case.rs  bmssp_core.rs  dist_value.rs  find_pivots.rs  mod.rs  state.rs
src/algorithms/bmssp_o_4/: bmssp_core.rs  dist_value.rs  mod.rs  state.rs  transform.rs
src/algorithms/bmssp_o_5/: base_case.rs  bmssp_core.rs  dist_value.rs  find_pivots.rs  mod.rs  state.rs
src/algorithms/bmssp_o_6/: base_case.rs  (+3 more)
src/generators/: barabasi_albert.rs  castro_d3.rs  castro_grid.rs  castro_h3.rs  erdos_renyi.rs  fixed_edge_count.rs  grid.rs  mod.rs  random_geometric.rs  traits.rs  watts_strogatz.rs
tests/: bmssp_correctness.rs  castro_verification.rs  d_struct_property.rs  d_struct_smoke.rs
