[package]
name = "duan"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
rand = "0.8"
hotpath = "0.13"
rustc-hash = "2"
smallvec = "1"
flate2 = "1"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
track-alloc = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "generate_graphs"
path = "src/bin/generate_graphs.rs"

[[bin]]
name = "correctness_probe"
path = "src/bin/correctness_probe.rs"

[[bench]]
name = "algorithms"
harness = false
